Added some more roles to the list of roles that calculate their names from content.

This is in order to conform more closely to the ARIA standard and in order to fix a bug that prevented Jaws from reading the contents of ARIA grid cells in Forms Mode.
BUG=707810
R=dmazzoni@chromium.org, aboxhall@chromium.org, aleventhal@chromium.org
TESTED=manually with Jaws using snippet in the bug, browser tests

Review-Url: https://codereview.chromium.org/2797463002
Cr-Commit-Position: refs/heads/master@{#462663}

Former-commit-id: 07fa440786a29497120ec0c71e50cb8dc332b6eb